fix: removed div that was wrapped button - footer logo

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -133,6 +133,8 @@ ul {
   position: absolute;
   bottom: 41%;
   right: 10px;
+  background: transparent;
+  border: none;
 
   @media screen and (min-width: 820px) {
     position: static;
@@ -141,10 +143,10 @@ ul {
   }
 }
 
-.footer-logo button {
+/* .footer-logo button {
   background: transparent;
   border: none;
-}
+} */
 
 /* docs */
 .footer-docs-wrapper {
